# spark-tts-poetry

./: pyproject.toml  struct.txt  webui.py
modules/spark_ui/: main.py
scripts_poetry/: download_model.py
spark/cli/: SparkTTS.py  inference.py
spark/runtime/triton_trtllm/model_repo/audio_tokenizer/1/: model.py
spark/runtime/triton_trtllm/model_repo/spark_tts/1/: model.py
spark/runtime/triton_trtllm/model_repo/vocoder/1/: model.py
spark/sparktts/models/: audio_tokenizer.py  bicodec.py
spark/sparktts/modules/encoder_decoder/: feat_decoder.py  feat_encoder.py  wave_generator.py
spark/sparktts/modules/fsq/: residual_fsq.py
spark/sparktts/modules/speaker/: ecapa_tdnn.py  speaker_encoder.py
